--- a/website/public/index.html
+++ b/website/public/index.html
@@ -6,6 +6,7 @@
 	<meta name="theme-color" content="#000000">
 	<meta name="description" content="NeuraSense bio-sensing technology experts making the subjective objective!">
 	<meta name="keywords" content="neurasense">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
 	<!--
 	  manifest.json provides metadata used when your web app is added to the
 	  homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
