--- a/website/public/index.html
+++ b/website/public/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="theme-color" content="#000000">
-	<meta name="description" content="NeuraSense bio-sensing technology experts making the subjective objective!">
-	<meta name="keywords" content="neurasense">
+	<meta name="description" content="NeuraSense Turning the Subjective Into the Objective through Biosensing">
+	<meta name="keywords" content="Neurasense® biosensing">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
 	<!--
 	  manifest.json provides metadata used when your web app is added to the
@@ -22,7 +22,7 @@
 	  work correctly both with client-side routing and a non-root public URL.
 	  Learn how to configure a non-root public URL by running `npm run build`.
 	-->
-	<title>NeuraSense</title>
+	<title>NeuraSense®</title>
 </head>
 <body>
 <noscript>
